force-app/main/default/objects/MFA_Enabled_Site__mdt.object
<CustomObject>
    <description>List of MFA enabled sites. Inspected during login flow.  If true, community user subjected to MFA flow when logging into community.</description>
    <fields>
        <fullName>Max_skip_count__c</fullName>
        <description>Maximum number of times a user can skip MFA registration</description>
        <inlineHelpText>Maximum number of times a user can skip MFA registration</inlineHelpText>
        <label>Max skip count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_skip_days__c</fullName>
        <description>Maximum number of days a user can skip MFA registrationm since MFA comms was emailed</description>
        <inlineHelpText>Maximum number of days a user can skip MFA registrationm since MFA comms was emailed</inlineHelpText>
        <label>Max skip days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skip_Limit_Strategy__c</fullName>
        <description>Strategy to employ limit number of times a user of this site can skip MFA registration
* Count - limit based on number of skips
* Days - limit based on number of days since MFA comms send</description>
        <inlineHelpText>Strategy to employ limit number of times a user of this site can skip MFA registration
* Count - limit based on number of skips
* Days - limit based on number of days since MFA comms send</inlineHelpText>
        <label>Skip Limit Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Count</fullName>
                    <default>true</default>
                    <label>Count</label>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skip_count_reminder_threshold__c</fullName>
        <description>Skip count at which user is sent an MFA reminder</description>
        <inlineHelpText>Skip count at which user is sent an MFA reminder</inlineHelpText>
        <label>Skip count reminder threshold</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skip_days_reminder_threshold__c</fullName>
        <description>Number of days since MFA comms was sent out before a reminder email is sent</description>
        <inlineHelpText>Number of days since MFA comms was sent out before a reminder email is sent</inlineHelpText>
        <label>Skip days reminder threshold</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MFA Enabled Site</label>
    <pluralLabel>MFA Enabled Sites</pluralLabel>
    <validationRules>
        <fullName>Skip_count_reminder_must_be_lt_max</fullName>
        <active>true</active>
        <description>Skip count reminder must be less than max skip count</description>
        <errorConditionFormula>Skip_count_reminder_threshold__c &gt;  Max_skip_count__c</errorConditionFormula>
        <errorDisplayField>DeveloperName</errorDisplayField>
        <errorMessage>Skip count reminder must be less than max skip count</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Skip_days_reminder_must_be_less_than_max</fullName>
        <active>true</active>
        <description>Skip days reminder must be less than skip days max</description>
        <errorConditionFormula>Skip_days_reminder_threshold__c &gt;  Max_skip_days__c</errorConditionFormula>
        <errorDisplayField>Skip_days_reminder_threshold__c</errorDisplayField>
        <errorMessage>Skip days reminder must be less than skip days max</errorMessage>
    </validationRules>
</CustomObject>